# klogg4mac

./: .gitignore  README.md
docs/native-macos/: ROADMAP.md
macos/: Info.plist  PACKAGING.md  README.md  build_app.sh  make_dmg.sh
macos/KloggMac/: Package.swift
macos/KloggMac/Sources/KloggBridge/: KloggBridge.mm
macos/KloggMac/Sources/KloggBridge/include/: KloggBridge.h
macos/KloggMac/Sources/KloggMac/: AppDefaults.swift  AppDelegate.swift  AppMenu.swift  AppPreferences.swift  AppToolbar.swift  ColorLabelsStore.swift  FavoritesStore.swift  HighlighterRule.swift  HighlighterStore.swift  HighlightersWindowController.swift  LogHighlighter.swift  LogLineNumberGutter.swift  LogScrollView.swift  LogSelection.swift  MainWindowController.swift  MarkerScroller.swift  MarksStore.swift  OverviewView.swift  PredefinedFilter.swift  PredefinedFiltersWindowController.swift  PreferencesWindowController.swift  QuickFindBar.swift  QuickFindController.swift  RecentFiles.swift  SavedSearchesStore.swift  ScratchpadWindowController.swift  SearchBarView.swift  SelfTest.swift  StatusBar.swift  TabController.swift  TabStripView.swift  main.swift
macos/engine/: CMakeLists.txt
src/logdata/src/: logdata.cpp  logfiltereddataworker.cpp
